Add test for categories controller

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,4 @@
-<h2>Categories page</h2>
-<div>
-<div>
+<h2>Categories</h2>
 <div class="container">
 <% if @categories.any? %>
   <% @categories.each do |category| %> 
@@ -9,13 +7,13 @@
         <div class="img">
            <img src="<%= category.icon %>" alt="category icon">
         </div>
-        <div clas="content">
+        <div class="content">
             <h3><%= link_to category.name, category_payments_path(category) %></h3>
             <p><%= category.created_at%></p>
         </div>
       </div>
       <div class="rightDiv">
-         <p><%= category.payments.sum(:amount) %></p>
+         <p>Amount <%= category.payments.sum(:amount) %></p>
          <%= button_to "Delete Category", category_path(category), method: :delete, data: { confirm: "Are you sure?" } %>
       </div>
     </div>
