--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -9,7 +9,7 @@
         </div>
         <div class="content">
             <h3><%= link_to category.name, category_payments_path(category) %></h3>
-            <p><%= category.created_at%></p>
+            <p><%= category.created_at.strftime("%Y-%m-%d %H:%M:%S")%></p>
         </div>
       </div>
       <div class="rightDiv">
