--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="payment">
        <p><%= @payment.name %></p>
-       <p><%= @payment.created_at %></p>
+       <p><%= @payment.created_at.strftime("%Y-%m-%d %H:%M:%S") %></p>
     </div>
     <div class="amount">
        Amount : <%= @payment.amount %>
