--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,7 +97,7 @@
 <header>
   <nav>
       <ul class="nav-links">
-          <li><%= link_to 'Dashboard', root_path, class: 'dashboard-nav' %></li>
+          <li><%= link_to 'Smart budget', root_path, class: 'dashboard-nav' %></li>
           <li class="app-profile-auth">
             <a><%= link_to 'Profile', edit_user_registration_path, class: 'profile-nav' %></a>
             <a><%= button_to 'Sign out', destroy_user_session_path, method: :delete, class: 'sign-out-button' %></a>
