--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -31,5 +31,5 @@
       <%= f.submit "Add Category" %>
     </div>
   <% end %>
-  <%= link_to 'Back', categories_path %>
+  <div class="back_link"><%= link_to 'Back', categories_path %></div>
 </div>
