--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -16,5 +16,5 @@
      
   <% end %>
   
-  <%= link_to 'Back', category_payments_path(category_id: @category.id) %>
+  <div class="back_link"><%= link_to 'Back', category_payments_path(category_id: @category.id) %></div>
 </div>
