--- a/app/views/categories/welcome.html.erb
+++ b/app/views/categories/welcome.html.erb
@@ -1,3 +1,8 @@
+<div class="we_div">
 <h1>Smart Budget</h1>
+<h2>Smart Budget: Effortlessly Manage Your Finances</h2>
+<div class="welcome_link">
 <%= link_to 'Sign Up', new_user_registration_path %>
 <%= link_to 'Log In', new_user_session_path %>
+</div>
+</div>
