--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,13 @@
 <h2>Sign up</h2>
-
+<div class="register">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <div class="register_header">
+  <p><%= link_to "Back", root_path %></p>
+  <h3>Register</h3>
+  <div class="actions">
+    <%= f.submit "Next" %>
+  </div>
+</div>
   <%= render "devise/shared/error_messages", resource: resource %>
   
   <div class="field">
@@ -26,9 +33,8 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+  
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
