--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Categories</h2>
+
 <div class="container">
 <% if @categories.any? %>
   <% @categories.each do |category| %> 
@@ -7,15 +7,17 @@
         <div class="img">
            <img src="<%= category.icon %>" alt="category icon">
         </div>
-        <div class="content">
-            <h3><%= link_to category.name, category_payments_path(category) %></h3>
-            <p><%= category.created_at.strftime("%Y-%m-%d %H:%M:%S")%></p>
-        </div>
       </div>
       <div class="rightDiv">
+      <div class="content">
+            <h3><%= link_to category.name, category_payments_path(category) %></h3>
+            <span><%= category.created_at.strftime("%Y-%m-%d %H:%M:%S")%></span>
+        </div>
+        <div>
          <p>$<%= category.payments.sum(:amount) %></p>
          <%= button_to "Delete Category", category_path(category), method: :delete, data: { confirm: "Are you sure?" } %>
       </div>
+         </div>
     </div>
   <% end%>
 <% else %>
