--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,37 @@
+<style>
+.links{
+  display: flex;
+  justify-content: center;
+  background-color: #f0f0f0;
+}
+.field{
+  background-color: white;
+}
+input,
+textarea {
+  width: 100%;
+  padding: 3.5%;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  border-radius: 0;
+  box-sizing: border-box;
+  resize: vertical;
+}
+.register_header{
+  margin-bottom: 1em;
+}
+form{
+  background-color: #f0f0f0;
+  display: flex;
+  gap: 0;
+}
+</style>
 <h2>Sign up</h2>
 <div class="register">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <div class="register_header">
   <p><%= link_to "Back", root_path %></p>
-  <h3>Register</h3>
+  <h4>Register</h4>
   <div class="actions">
     <%= f.submit "Next" %>
   </div>
@@ -11,30 +39,18 @@
   <%= render "devise/shared/error_messages", resource: resource %>
   
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :name, placeholder: "Full name" %>
   </div>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email"  %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
 
   
 <% end %>
-
-<%= render "devise/shared/links" %>
 </div>
