--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,19 +1,17 @@
 <div class="cont">
 <%= form_with(model: [@category, @payment], local: true) do |f| %>
+  <h3> Transaction for <%= @category.name%></h3>
     <div>
-      <%= f.label :name, 'Name' %>
       <%= f.text_field :name, placeholder: 'Transaction name' %>
     </div>
   
     <div>
-      <%= f.label :amount, 'Amount'%>
       <%= f.text_field :amount, placeholder: 'Your payment ' %>
     </div>
     
-    <div > 
-             <%= f.label :category_id, 'Select category' %>
-             <%= f.collection_select(:category_id, @available_categories, :id, :name, {}, {}) %>
-    </div>
+   <div>
+     <%= f.text_field :category_name, placeholder: 'Category name' %>
+ </div>
     
     <div>
       <%= f.submit 'Add Transaction'%>
@@ -21,5 +19,5 @@
      
   <% end %>
   
-  <div class="back_link"><%= link_to 'Back', category_payments_path(category_id: @category.id) %></div>
+  <div class="back_link"><%= link_to 'Back', category_payments_path(@category) %></div>
 </div>
