--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -9,9 +9,9 @@
       <%= f.text_field :amount, placeholder: 'Your payment ' %>
     </div>
     
-   <div>
-     <%= f.text_field :category_name, placeholder: 'Category name' %>
- </div>
+  <div >        
+     <%= f.collection_select(:category_id, @available_categories, :id, :name, {}, {}) %>
+  </div>
     
     <div>
       <%= f.submit 'Add Transaction'%>
